# pasta-tokens

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: local_v3.rs  local_v3_parse.rs  local_v4.rs  local_v4_parse.rs  local_wrap_v3.rs  local_wrap_v3_parse.rs  local_wrap_v4.rs  local_wrap_v4_parse.rs  public_v3.rs  public_v3_parse.rs  public_v4.rs  public_v4_parse.rs  seal.rs  seal_v3.rs  seal_v4.rs  secret_wrap_v3.rs  secret_wrap_v3_parse.rs  secret_wrap_v4.rs  secret_wrap_v4_parse.rs
src/: base64ct2.rs  id.rs  key.rs  lib.rs  local.rs  pae.rs  pbkw.rs  pke.rs  public.rs  wrap.rs
src/claims/: mod.rs
src/key/: arbitrary.rs  convert.rs  mod.rs  plaintext.rs
src/paserk/: id.rs  mod.rs  pbkw.rs  pke.rs  plaintext.rs  wrap.rs
src/purpose/local/: impl_.rs  mod.rs  v3.rs  v4.rs
src/purpose/public/: impl_.rs  mod.rs  v3.rs  v4.rs
tests/: id.rs  key.rs  paserk.rs  paseto.rs  pbkw.rs  pke.rs  pwkw.rs  vectors.rs  wrap_pie.rs
tests/test-vectors/: README.md  k4.pid.json  k4.public.json  v3.json  v4.json
