[package]
name = "pasta-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/pasta-tokens"
description = "Platform Agnostic SEcurity TOkens (PASETO) is a secure alternative to JOSE/JWT"
license = "MIT"
keywords = ["paseto", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["v3", "v4"]
# V3 contains NIST approved algoritms only
v3 = [
  "hmac",
  "aes",
  "ctr",
  "sha2",
  "p384",
  "ecdsa",
  "pbkdf2",
  "hkdf",
]
# V4 is recommended
v4 = [
  "sha2",
  "blake2",
  "chacha20",
  "ed25519-dalek",
  "curve25519-dalek",
  "argon2",
]
test = []

[dependencies]
subtle = "2.5.0"
generic-array = "0.14"
base64ct = "1.6.0"
base64 = "0.13.0"
cipher = "0.4.4"
digest = { version = "0.10.7", features = ["mac"] }
rand = "0.8.5"
signature = "2.0.0"

# V4
chacha20 = { version = "0.9.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
ed25519-dalek = { version = "=2.0.0-rc.3", features = ["hazmat", "digest"], optional = true }
curve25519-dalek = { version = "=4.0.0-rc.3", optional = true }
argon2 = { version = "0.5.0", optional = true }

# V3
aes = { version = "0.8.2", optional = true }
ctr = { version = "0.9.2", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.2", optional = true }
p384 = { version = "0.13.0", optional = true, features = ["ecdh", "pkcs8", "ecdsa-core"] }
ecdsa = { version = "0.16.0", optional = true, features = ["digest", "hazmat"] }
pbkdf2 = { version = "0.12.1", optional = true }
hkdf = { version = "0.12.3", optional = true }

arbitrary = { version = "1.3", features = ["derive"], optional = true }

serde = { version = "1" }
serde_json = "1"

[dev-dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
ff = "0.13.0"
pasta-tokens = { path = ".", features = ["test"] }

libtest-mimic = "0.6.1"

[profile.dev.package."*"]
opt-level = 2
debug = false
incremental = false

[[test]]
name = "test-vectors"
path = "tests/vectors.rs"
harness = false

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
