[package]
name = "pasta-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/pasta-tokens"
description = "Platform Agnostic SEcurity TOkens (PASETO) is a secure alternative to JOSE/JWT"
license = "MIT"
keywords = ["paseto", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = [
  "v4-public",
  "v4-local",
  "v3-public",
  "v3-local",
  "v3-pbkw",
  "v4-pbkw",
  "v3-pke",
  "v4-pke",
  "v3-id",
  "v4-id",
  "v3-wrap",
  "v4-wrap",
]

# docsrs = []
local = []
public = []

paserk = []
# Key id hashes
id = ["paserk"]
# Password based key wrapping
pbkw = ["paserk"]
# Key sealing
pke = ["paserk"]
# Key wrapping
wrap = ["paserk"]

# V3 contains NIST approved algoritms only
v3 = []
v3-local = ["v3", "local", "aes", "ctr", "hkdf", "hmac", "sha2"]
v3-public = ["v3", "public", "p384", "ecdsa"]
v3-id = ["v3", "id", "sha2"]
v3-pbkw = ["v3", "pbkw", "pbkdf2", "v3-local"]
v3-pke = ["v3", "pke", "v3-local", "v3-public"]
v3-wrap = ["v3", "wrap", "v3-local"]

# V4 is recommended
v4 = []
v4-local = ["v4", "local", "blake2", "chacha20"]
v4-public = ["v4", "public", "ed25519-dalek", "curve25519-dalek"]
v4-id = ["v4", "id", "blake2"]
v4-pbkw = ["v4", "pbkw", "argon2", "v4-local"]
v4-pke = ["v4", "pke", "v4-local", "v4-public"]
v4-wrap = ["v4", "wrap", "v4-local"]

test = []

[dependencies]
subtle = "2.5.0"
generic-array = "0.14"
base64ct = { version = "1.6.0", features = ["alloc"] }
cipher = "0.4.4"
digest = { version = "0.10.7", features = ["mac"] }
rand = "0.8.5"
signature = "2.0.0"
zeroize = { version = "1", features = ["zeroize_derive"] }

# V4
chacha20 = { version = "0.9.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
ed25519-dalek = { version = "2.0.0", features = [
  "hazmat",
  "digest",
], optional = true }
curve25519-dalek = { version = "4.0.0", optional = true }
argon2 = { version = "0.5.0", optional = true }

# V3
aes = { version = "0.8.2", optional = true }
ctr = { version = "0.9.2", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.2", optional = true }
p384 = { version = "0.13.0", optional = true, features = [
  "ecdh",
  "pkcs8",
  "ecdsa-core",
] }
ecdsa = { version = "0.16.0", optional = true, features = ["digest", "hazmat"] }
hkdf = { version = "0.12.3", optional = true }
pbkdf2 = { version = "0.12.1", optional = true }

arbitrary = { version = "1.3", features = ["derive"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"
hex = "0.4"
ff = "0.13.0"
pasta-tokens = { path = ".", features = ["test"] }

libtest-mimic = "0.6.1"

[profile.dev.package."*"]
opt-level = 2
debug = false
incremental = false

[[test]]
name = "paseto-test-vectors"
path = "tests/paseto.rs"
harness = false

[[test]]
name = "paserk-test-vectors"
path = "tests/paserk.rs"
harness = false

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
