[package]
name = "rusty_paserk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
rand = "0.8.5"
p384 = { version = "0.13.0" }

[dependencies.rusty_paserk]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "seal_v3"
path = "fuzz_targets/seal_v3.rs"
test = false
doc = false

[[bin]]
name = "seal_v4"
path = "fuzz_targets/seal_v4.rs"
test = false
doc = false

[[bin]]
name = "local_wrap_v4"
path = "fuzz_targets/local_wrap_v4.rs"
test = false
doc = false

[[bin]]
name = "local_wrap_v3"
path = "fuzz_targets/local_wrap_v3.rs"
test = false
doc = false

[[bin]]
name = "secret_wrap_v4"
path = "fuzz_targets/secret_wrap_v4.rs"
test = false
doc = false

[[bin]]
name = "secret_wrap_v3"
path = "fuzz_targets/secret_wrap_v3.rs"
test = false
doc = false
